--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ApiKeySettings": {
-    "Key": "Teched2025Gopas"
+    "Key": "MSPP2025"
   },
   "ConnectionStrings": { 
     "MSPPWebAPI2025": "default_value_or_null"
